fixed some imports

--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -37,13 +37,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Import necesaary libraries"
+    "# Import necessary libraries"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "data = pd.read_csv(\"https://raw.githubusercontent.com/AdiPersonalWorks/Random/master/student_scores%20-%20student_scores.csv\")\r\n",
     "data"
@@ -257,7 +257,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "plt.scatter(x=data['Hours'],y=data['Scores'])\r\n",
     "plt.xlabel('Hours')\r\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "x = data.iloc[:,:-1]   #assign X\r\n",
     "y = data.iloc[:,1]     #assign Y"
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "X_train,X_test,y_train,y_test = train_test_split(x,y,test_size=0.1,random_state=0)  #split data into test and train "
    ],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "regression = LinearRegression()     #call linear regression function\r\n",
     "regression.fit(X_train,y_train)     #fit the model \r\n",
@@ -330,14 +330,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "source": [
     "graph = regression.coef_*x+regression.intercept_     #regular expression\r\n"
    ],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "source": [
     "plt.scatter(x,y)     #plot the LR \r\n",
     "plt.plot(x,graph)\r\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "source": [
     "hour = np.array([9.25]).reshape(1,1)    \r\n",
     "prediction = regression.predict(hour)    #predict the value for the given data\r\n",
